; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_submodule.c_lookup_head_remote_key.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_submodule.c_lookup_head_remote_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@GIT_ERROR_INVALID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"HEAD does not refer to a branch.\00", align 1
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i32*)* @lookup_head_remote_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lookup_head_remote_key(%struct.TYPE_7__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_7__, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* null, i32** %7, align 8
  %9 = bitcast %struct.TYPE_7__* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %9, i8* align 4 bitcast (%struct.TYPE_7__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @git_repository_head(i32** %7, i32* %10)
  store i32 %11, i32* %6, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  store i32 %14, i32* %3, align 4
  br label %44

15:                                               ; preds = %2
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @git_reference_is_branch(i32* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %23, label %19

19:                                               ; preds = %15
  %20 = load i32, i32* @GIT_ERROR_INVALID, align 4
  %21 = call i32 @git_error_set(i32 %20, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  %22 = load i32, i32* @GIT_ENOTFOUND, align 4
  store i32 %22, i32* %6, align 4
  br label %39

23:                                               ; preds = %15
  %24 = load i32*, i32** %5, align 8
  %25 = load i32*, i32** %7, align 8
  %26 = call i32 @git_reference_name(i32* %25)
  %27 = call i32 @git_branch_upstream_name(%struct.TYPE_7__* %8, i32* %24, i32 %26)
  store i32 %27, i32* %6, align 4
  %28 = icmp slt i32 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %23
  br label %39

30:                                               ; preds = %23
  %31 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %32 = load i32*, i32** %5, align 8
  %33 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @git_branch_remote_name(%struct.TYPE_7__* %31, i32* %32, i32 %34)
  store i32 %35, i32* %6, align 4
  %36 = icmp slt i32 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %30
  br label %39

38:                                               ; preds = %30
  br label %39

39:                                               ; preds = %38, %37, %29, %19
  %40 = call i32 @git_buf_dispose(%struct.TYPE_7__* %8)
  %41 = load i32*, i32** %7, align 8
  %42 = call i32 @git_reference_free(i32* %41)
  %43 = load i32, i32* %6, align 4
  store i32 %43, i32* %3, align 4
  br label %44

44:                                               ; preds = %39, %13
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @git_repository_head(i32**, i32*) #2

declare dso_local i32 @git_reference_is_branch(i32*) #2

declare dso_local i32 @git_error_set(i32, i8*) #2

declare dso_local i32 @git_branch_upstream_name(%struct.TYPE_7__*, i32*, i32) #2

declare dso_local i32 @git_reference_name(i32*) #2

declare dso_local i32 @git_branch_remote_name(%struct.TYPE_7__*, i32*, i32) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_7__*) #2

declare dso_local i32 @git_reference_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
